# tinc-graph

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  shell.nix  statistics.jq  tinc-midpoint  tinc-statistics
src/: lib.rs  main.rs
static/: graph.html  map.html
