[package]
name = "tinc-graph"
version = "0.1.0"
authors = ["Kierán Meinhardt <kmein@posteo.de>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
maxminddb = "0.21.0"
structopt = "0.3"
